--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,8 +6,8 @@ header{
         
     }
     h1{
+        font-size: 30px;
         color: $color_h1;
-        font-size: $height_h1;
         font-family: $font_family_h1;
     }
 }
