--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -23,20 +23,23 @@
             height: 100%;
             width: 100%;
         }
-        h2{
-            font-size: 14px;
-            font-family: $font_family_h2;
-            color: $color_h2;
+        h3{
+            font-size: $font_size_h3;
+            font-family: $font_family_h3;
+            color: $color_h3;
             font-weight: bolder;
         }
         p{
-            font-size: 14px;
+            font-size: $font_family_p;
             font-family: $font_family_p;
-            color: $color_p;
+            color: $color_p_card;
+            
         }
         .button_recommended{
-            background-color: black;
-            color: white;
+            background-color: $bc_btn;
+            color: $color_btn;
+            font-family: $font_family_btn;
+            font-size: $font_family_btn;
             padding: 3px 20px;
             border-radius: 25px;
             opacity: 0;
@@ -68,20 +71,28 @@
    
     .recommended_1{
         margin: 10px;
-
-        h2{
-            font-size: 11px;
-            font-weight: bolder;
-            font-family: $font_family_h2;
-            color: $color_h2;
+        ul{
+            h3{
+                font-size: $font_size_h3_mq;
+                font-weight: bolder;
+                font-family: $font_family_h2;
+                color: $color_h2;
+            }
+            p{ 
+                font-size: $font_size_p_mq;
+                font-family: $font_family_p;
+                color: $color_p_card;
+    
+            }
+            .button_recommended{
+                background-color: $bc_btn;
+                color: $color_btn;
+                padding: 5px 20px;
+                border-radius: 20px;
+                font-size: $font_size_btn_mq;
+            }
         }
-        .button_recommended{
-            background-color: black;
-            color: white;
-            padding: 5px 20px;
-            border-radius: 20px;
-            font-size: 10px;
-        }
+        
     }
    
     .recommended_1 p{
@@ -119,7 +130,7 @@
                 &:hover{
                     padding-left: 20px;
                     font-weight: bolder;
-                    /* background-color: antiquewhite; */
+                    
                 }
             }
         }
@@ -172,25 +183,29 @@
         li{
             text-align: center;
         }
-        h2{
-            font-size: 14px;
-            font-family: $font_family_h2;
-            color: $color_h2;
+        h3{
+            font-size: $font_size_h3;
+            font-family: $font_family_h3;
+            color: $color_h3;
             font-weight: bolder;
         }
         p{
-            font-size: 14px;
+            font-size: $font_family_p;
             font-family: $font_family_p;
-            color: $color_p;
+            color: $color_p_card;
+            
         }
         .boton_compra_perfume {
             opacity: 0;
                     
             .btn_compra{
-                background-color: black;
-                color: white;
-                padding: 5px 20px;
-                border-radius: 20px;
+                background-color: $bc_btn;
+                color: $color_btn;
+                font-family: $font_family_btn;
+                font-size: $font_family_btn;
+                padding: 3px 20px;
+                border-radius: 25px;
+                margin-bottom: 15px;
             }
         }
     }
@@ -236,24 +251,27 @@
             margin-top: 30px;
             margin-bottom: 30px;
             gap: 15px;
+
+            h3{
+                font-size: $font_size_h3_mq;
+                font-weight: bolder;
+                font-family: $font_family_h2;
+                color: $color_h2;
+            }
+            p{ 
+                font-size: $font_size_p_mq;
+                font-family: $font_family_p;
+                color: $color_p_card;
+            }
+            .btn_compra{
+                background-color: $bc_btn;
+                color: $color_btn;
+                padding: 5px 20px;
+                border-radius: 20px;
+                font-size: $font_size_btn_mq;
+            }
         }
-        h2{
-            font-size: 11px;
-            font-family: $font_family_h2;
-            color: $color_h2;
-        }
-        p{
-            font-size: 10px;
-            font-family: $font_family_p;
-            color: $color_p;
-        }
-        .btn_compra{
-            background-color: black;
-            color: white;
-            padding: 5px 20px;
-            border-radius: 20px;
-            font-size: 10px;
-        }
+        
     }
     .aside{
         display: none;
@@ -290,7 +308,7 @@
                 &:hover{
                     padding-left: 20px;
                     font-weight: bolder;
-                    /* background-color: antiquewhite; */
+                    
                 }
             }
         }
@@ -369,25 +387,29 @@
         li{
             text-align: center;
         }
-        h2{
-            font-size: 14px;
-            font-family: $font_family_h2;
-            color: $color_h2;
+        h3{
+            font-size: $font_size_h3;
+            font-family: $font_family_h3;
+            color: $color_h3;
             font-weight: bolder;
         }
         p{
-            font-size: 14px;
+            font-size: $font_family_p;
             font-family: $font_family_p;
-            color: $color_p;
+            color: $color_p_card;
+            
         }
         .boton_compra_maquillajes{
             opacity: 0;
             
             .btn_compra{
-                background-color: black;
-                color: white;
-                padding: 5px 20px;
-                border-radius: 20px;
+                background-color: $bc_btn;
+                color: $color_btn;
+                font-family: $font_family_btn;
+                font-size: $font_family_btn;
+                padding: 3px 20px;
+                border-radius: 25px;
+                margin-bottom: 15px;
             }
         }
     }
@@ -434,25 +456,27 @@
             margin-top: 30px;
             margin-bottom: 30px;
             gap: 15px;
+
+            h3{
+                font-size: $font_size_h3_mq;
+                font-weight: bolder;
+                font-family: $font_family_h2;
+                color: $color_h2;
+            }
+            p{ 
+                font-size: $font_size_p_mq;
+                font-family: $font_family_p;
+                color: $color_p_card;
+            }
+            .btn_compra{
+                background-color: $bc_btn;
+                color: $color_btn;
+                padding: 5px 20px;
+                border-radius: 20px;
+                font-size: $font_size_btn_mq;
+            }
         }
-        h2{
-            font-weight: bolder;
-            font-size: 11px;
-            font-family: $font_family_h2;
-            color: $color_h2;
-        }
-        p{
-            font-size: 10px;
-            font-family: $font_family_p;
-            color: $color_p;
-        }
-        .btn_compra{
-            background-color: black;
-            color: white;
-            padding: 5px 20px;
-            border-radius: 20px;
-            font-size: 10px;
-        }
+        
     }
     .aside{
         display: none;
@@ -489,7 +513,7 @@
                 &:hover{
                     padding-left: 20px;
                     font-weight: bolder;
-                    /* background-color: antiquewhite; */
+                    
                 }
             }
         }
@@ -568,25 +592,29 @@
         li{
             text-align: center;
         }
-        h2{
-            font-size: 14px;
-            font-family: $font_family_h2;
-            color: $color_h2;
+        h3{
+            font-size: $font_size_h3;
+            font-family: $font_family_h3;
+            color: $color_h3;
             font-weight: bolder;
         }
         p{
-            font-size: 14px;
+            font-size: $font_family_p;
             font-family: $font_family_p;
-            color: $color_p;
+            color: $color_p_card;
+            
         }
         .boton_compra_unias{
             opacity: 0;
         
             .btn_compra{
-                background-color: black;
-                color: white;
-                padding: 5px 20px;
-                border-radius: 20px;
+                background-color: $bc_btn;
+                color: $color_btn;
+                font-family: $font_family_btn;
+                font-size: $font_family_btn;
+                padding: 3px 20px;
+                border-radius: 25px;
+                margin-bottom: 15px;
             }
         }
     }
@@ -633,25 +661,27 @@
             margin-top: 30px;
             margin-bottom: 30px;
             gap: 15px;
+
+            h3{
+                font-size: $font_size_h3_mq;
+                font-weight: bolder;
+                font-family: $font_family_h2;
+                color: $color_h2;
+            }
+            p{ 
+                font-size: $font_size_p_mq;
+                font-family: $font_family_p;
+                color: $color_p_card;
+            }
+            .btn_compra{
+                background-color: $bc_btn;
+                color: $color_btn;
+                padding: 5px 20px;
+                border-radius: 20px;
+                font-size: $font_size_btn_mq;
+            }
         }
-        h2{
-            font-weight: bolder;
-            font-size: 11px;
-            font-family: $font_family_h2;
-            color: $color_h2;
-        }
-        p{
-            font-size: 10px;
-            font-family: $font_family_p;
-            color: $color_p;
-        }
-        .btn_compra{
-            background-color: black;
-            color: white;
-            padding: 5px 20px;
-            border-radius: 20px;
-            font-size: 10px;
-        }
+        
     } 
     .aside{
         display: none;
