--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -17,9 +17,9 @@
         list-style-type: none;
     
         a{  
-            
             text-decoration: none;
             color: $color_a_nav;
+            font-family: $font_family_nav;
         }
     }
 }
@@ -48,8 +48,8 @@
             display: block;
             a{
                 text-decoration: none;
-                font-family: $font_family_nav;
                 color: $color_a_nav;
+                font-family: $font_family_nav;
                 padding: 15px 15px 15px 20px;
             }
             &:hover{
@@ -62,4 +62,9 @@
         display: block;
     }
     
+}
+@media only screen and (max-width:700px){
+    .ul_nav_horizontal{
+        margin: 0;
+    }
 }
