--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,31 +1,31 @@
 
 
 $font_family_body:'Raleway', sans-serif;
-$color_h1: blue;
+$color_h1: black;
 $height_h1:30px;
 $font_family_h1: 'Raleway', sans-serif;
 
-$color_a_nav: red;
+$color_a_nav: white;
 $font_family_nav: 'Raleway', sans-serif;
 
-$color_h2: blue;
+$color_h2: black;
 $font_family_h2: 'Raleway', sans-serif;
 
-$color_h3: blue;
+$color_h3: black;
 $font_family_h3: 'Raleway', sans-serif;
 $font_size_h3:15px;
 $font_size_h3_mq:11px;
-$color_p_card: blue;
+$color_p_card: black;
 $font_family_p: 'Raleway', sans-serif;
 $font_size_p:15px;
 $font_size_p_mq:11px;
 
 $font_family_footer: 'Raleway', sans-serif;
-$color_p_footer: blue;
+$color_p_footer: black;
 
 $font_family_btn: 'Raleway', sans-serif;
-$color_btn: red;
-$bc_btn: blue;
+$color_btn: white;
+$bc_btn: black;
 $font_size_btn:15px;
 $font_size_btn_mq:10px;
 
