--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,4 +1,18 @@
 
+h3{
+    font-size: $font_size_h3;
+    font-family: $font_family_h3;
+    color: $color_h3;
+    font-weight: bolder;
+}
+.h3_mq{
+    $font_size_h3_mq:11px;
+}
+p{
+    font-size: $font_family_p;
+    font-family: $font_family_p;
+    color: $color_p_card;
+}
 /******************** INICIO INDEX *********************/
 .carousel_movil{
     display: none;
@@ -12,6 +26,7 @@
     }
 }
 .recommended_1{
+    
     margin: 30px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
    
@@ -24,15 +39,10 @@
             width: 100%;
         }
         h3{
-            font-size: $font_size_h3;
-            font-family: $font_family_h3;
-            color: $color_h3;
-            font-weight: bolder;
+            @extend h3;
         }
         p{
-            font-size: $font_family_p;
-            font-family: $font_family_p;
-            color: $color_p_card;
+            @extend p;
             
         }
         .button_recommended{
@@ -74,22 +84,17 @@
         ul{
             h3{
                 font-size: $font_size_h3_mq;
-                font-weight: bolder;
-                font-family: $font_family_h2;
-                color: $color_h2;
-            }
+
+           }
             p{ 
                 font-size: $font_size_p_mq;
-                font-family: $font_family_p;
-                color: $color_p_card;
-    
+             
             }
             .button_recommended{
-                background-color: $bc_btn;
-                color: $color_btn;
+                font-size: $font_size_btn_mq;
                 padding: 5px 20px;
                 border-radius: 20px;
-                font-size: $font_size_btn_mq;
+                
             }
         }
         
@@ -184,15 +189,10 @@
             text-align: center;
         }
         h3{
-            font-size: $font_size_h3;
-            font-family: $font_family_h3;
-            color: $color_h3;
-            font-weight: bolder;
+            @extend h3;
         }
         p{
-            font-size: $font_family_p;
-            font-family: $font_family_p;
-            color: $color_p_card;
+            @extend p;
             
         }
         .boton_compra_perfume {
@@ -254,21 +254,17 @@
 
             h3{
                 font-size: $font_size_h3_mq;
-                font-weight: bolder;
-                font-family: $font_family_h2;
-                color: $color_h2;
-            }
+                
+           }
             p{ 
                 font-size: $font_size_p_mq;
-                font-family: $font_family_p;
-                color: $color_p_card;
+             
             }
             .btn_compra{
-                background-color: $bc_btn;
-                color: $color_btn;
+                font-size: $font_size_btn_mq;
                 padding: 5px 20px;
                 border-radius: 20px;
-                font-size: $font_size_btn_mq;
+                
             }
         }
         
@@ -388,15 +384,10 @@
             text-align: center;
         }
         h3{
-            font-size: $font_size_h3;
-            font-family: $font_family_h3;
-            color: $color_h3;
-            font-weight: bolder;
+            @extend h3;
         }
         p{
-            font-size: $font_family_p;
-            font-family: $font_family_p;
-            color: $color_p_card;
+            @extend p;
             
         }
         .boton_compra_maquillajes{
@@ -459,21 +450,17 @@
 
             h3{
                 font-size: $font_size_h3_mq;
-                font-weight: bolder;
-                font-family: $font_family_h2;
-                color: $color_h2;
-            }
+                
+           }
             p{ 
                 font-size: $font_size_p_mq;
-                font-family: $font_family_p;
-                color: $color_p_card;
+             
             }
             .btn_compra{
-                background-color: $bc_btn;
-                color: $color_btn;
+                font-size: $font_size_btn_mq;
                 padding: 5px 20px;
                 border-radius: 20px;
-                font-size: $font_size_btn_mq;
+                
             }
         }
         
@@ -593,15 +580,10 @@
             text-align: center;
         }
         h3{
-            font-size: $font_size_h3;
-            font-family: $font_family_h3;
-            color: $color_h3;
-            font-weight: bolder;
+            @extend h3;
         }
         p{
-            font-size: $font_family_p;
-            font-family: $font_family_p;
-            color: $color_p_card;
+            @extend p;
             
         }
         .boton_compra_unias{
@@ -664,21 +646,17 @@
 
             h3{
                 font-size: $font_size_h3_mq;
-                font-weight: bolder;
-                font-family: $font_family_h2;
-                color: $color_h2;
-            }
+                
+           }
             p{ 
                 font-size: $font_size_p_mq;
-                font-family: $font_family_p;
-                color: $color_p_card;
+             
             }
             .btn_compra{
-                background-color: $bc_btn;
-                color: $color_btn;
+                font-size: $font_size_btn_mq;
                 padding: 5px 20px;
                 border-radius: 20px;
-                font-size: $font_size_btn_mq;
+                
             }
         }
         
